--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -563,3 +563,42 @@
   annotation = {00019  Bandiera\_abtest: a Cc\_license\_type: cc\_by Cg\_type: Nature Research Journals Primary\_atype: Research Subject\_term: Autism spectrum disorders;Prognostic markers Subject\_term\_id: autism-spectrum-disorders;prognostic-markers},
   file = {/Users/hufengling/Zotero/storage/UJUQTLW3/Lin et al. - 2019 - Development of frontoparietal connectivity predict.pdf;/Users/hufengling/Zotero/storage/4S6RW6CI/s41398-019-0418-5.html},
 }
+@Article{takAssociationsRestingStateFMRI2015,
+  title = {Associations of {{Resting-State fMRI Functional Connectivity}} with {{Flow-BOLD Coupling}} and {{Regional Vasculature}}},
+  author = {Sungho Tak and Jonathan R. Polimeni and Danny J.J. Wang and Lirong Yan and J. Jean Chen},
+  date = {2015-04-01},
+  journaltitle = {Brain Connectivity},
+  shortjournal = {Brain Connect},
+  volume = {5},
+  number = {3},
+  eprint = {25384681},
+  eprinttype = {pmid},
+  pages = {137--146},
+  issn = {2158-0014},
+  doi = {10.1089/brain.2014.0299},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4394176/},
+  urldate = {2022-02-10},
+  abstract = {There has been tremendous interest in applying functional magnetic resonance imaging-based resting-state functional connectivity (rs-fcMRI) measurements to the study of brain function. However, a lack of understanding of the physiological mechanisms of rs-fcMRI limits their ability to interpret rs-fcMRI findings. In this work, the authors examine the regional associations between rs-fcMRI estimates and dynamic coupling between the blood oxygenation level-dependent (BOLD) and cerebral blood flow (CBF), as well as resting macrovascular volume. Resting-state BOLD and CBF data were simultaneously acquired using a dual-echo pseudocontinuous arterial spin labeling (pCASL) technique, whereas macrovascular volume fraction was estimated using time-of-flight MR angiography. Functional connectivity within well-known functional networks—including the default mode, frontoparietal, and primary sensory-motor networks—was calculated using a conventional seed-based correlation approach. They found the functional connectivity strength to be significantly correlated with the regional increase in CBF-BOLD coupling strength and inversely proportional to macrovascular volume fraction. These relationships were consistently observed within all functional networks considered. Their findings suggest that highly connected networks observed using rs-fcMRI are not likely to be mediated by common vascular drainage linking distal cortical areas. Instead, high BOLD functional connectivity is more likely to reflect tighter neurovascular connections, attributable to neuronal pathways.},
+  pmcid = {PMC4394176},
+  annotation = {00044},
+  file = {/Users/hufengling/Zotero/storage/I2KKSL64/Tak_et_al_2015_Associations_of_Resting-State_fMRI_Functional_Connectivity_with_Flow-BOLD.pdf},
+}
+@Article{vandekarSubjectlevelMeasurementLocal2016,
+  title = {Subject-Level {{Measurement}} of {{Local Cortical Coupling}}},
+  author = {Simon N. Vandekar and Russell T. Shinohara and Armin Raznahan and Ryan D. Hopson and David R. Roalf and Kosha Ruparel and Ruben C. Gur and Raquel E. Gur and Theodore D. Satterthwaite},
+  date = {2016-06},
+  journaltitle = {NeuroImage},
+  shortjournal = {Neuroimage},
+  volume = {133},
+  eprint = {26956908},
+  eprinttype = {pmid},
+  pages = {88--97},
+  issn = {1053-8119},
+  doi = {10.1016/j.neuroimage.2016.03.002},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4889557/},
+  urldate = {2020-06-19},
+  abstract = {The human cortex is highly folded to allow for a massive expansion of surface area. Notably, the thickness of the cortex strongly depends on cortical topology, with gyral cortex sometimes twice as thick as sulcal cortex. We recently demonstrated that global differences in thickness between gyral and sulcal cortex continue to evolve throughout adolescence. However, human cortical development is spatially heterogeneous, and global comparisons lack power to detect localized differences in development or psychopathology. Here we extend previous work by proposing a new measure – local cortical coupling – that is sensitive to differences in the localized topological relationship between cortical thickness and sulcal depth. After estimation, subject-level coupling maps can be analyzed using standard neuroimaging analysis tools. Capitalizing on a large cross-sectional sample (n=932) of youth imaged as part of the Philadelphia Neurodevelopmental Cohort, we demonstrate that local coupling is spatially heterogeneous and exhibits nonlinear development-related trajectories. Moreover, we uncover sex differences in coupling that indicate divergent patterns of cortical topology. Developmental changes and sex differences in coupling support its potential as a neuroimaging phenotype for investigating neuropsychiatric disorders that are increasingly conceptualized as disorders of brain development. R code to estimate subject-level coupling maps from any two cortical surfaces generated by FreeSurfer is made publicly available along with this manuscript.},
+  pmcid = {PMC4889557},
+  keywords = {age-based differences,multi-modal coupling,neurodevelopment,philadelphia neurodevelopmental cohort,sex-based differences,statistical map,subject-level},
+  file = {/Users/hufengling/Zotero/storage/SP4HUB86/Vandekar et al. - 2016 - Subject-level Measurement of Local Cortical Coupli.pdf},
+}
