--- a/manuscript/01-introduction.Rmd
+++ b/manuscript/01-introduction.Rmd
@@ -1,11 +1,15 @@
 # Introduction
 
-  There is increased availability of multi-modality neuroimaging data on individual subjects, with each modality containing unique information about brain structure or function. Such data allow us to explore patterns in individual modalities as well as patterns in interactions between modalities, or intermodal coupling (IMCo), on global, regional, or local scales [@uddinComplexRelationshipsStructural2013; @honeyPredictingHumanRestingstate2009; @guHeritabilityInterindividualVariability2021; @shokri-kojoriCorrespondenceCerebralGlucose2019; @ballerDevelopmentalCouplingCerebral2021; @vandekarSubjectlevelMeasurementLocal2016; @valcarcelDualModelingApproach2018; @valcarcelMIMoSAAutomatedMethod2018].
+  There is increased availability of multi-modality neuroimaging data on individual subjects, with each modality containing unique information about brain structure or function. Such data allow us to explore patterns in individual modalities as well as patterns in the relationships between modalities, which we call intermodal coupling (IMCo), at global, regional, or local resolutions [@uddinComplexRelationshipsStructural2013; @honeyPredictingHumanRestingstate2009; @guHeritabilityInterindividualVariability2021; @shokri-kojoriCorrespondenceCerebralGlucose2019; @takAssociationsRestingStateFMRI2015; @ballerDevelopmentalCouplingCerebral2021; @valcarcelDualModelingApproach2018; @valcarcelMIMoSAAutomatedMethod2018; @vandekarSubjectlevelMeasurementLocal2016]. The progress made by these IMCo studies have transformed our understanding of the brain, and it suggests that advancements in the methodology for studying IMCo have the potential to further enable such insights.
   
-  For example, on the global scale, structural connectivity (SC) and functional connectivity (FC) are strongly coupled in adults, but less straightforward in children. Additionally, bilateral FC can still be present in the abscence of major commisural fissures [@uddinComplexRelationshipsStructural2013]. In 2021, Gu et al. built on this global understanding of SC-FC coupling by exploring regional relationships -- they found SC-FC coupling to be strongest in visual and subcortical areas with high SC [@guHeritabilityInterindividualVariability2021]. In the study of energy utilization in the brain, Shokri-Kojori et al. showed that regional correspondence between cerebral glucose metabolism and fluctuations in blood oxygenation not only differed between brain networks in healthy patients but was also sensitive to differences between patients with acute or chronic alcohol use [@shokri-kojoriCorrespondenceCerebralGlucose2019].
+  On the global scale, intermodal relationships have long been of interest. For example, structural connectivity (SC) and functional connectivity (FC) are strongly correlated in adults, but the relationship is less straightforward in children [@uddinComplexRelationshipsStructural2013]. Gu et al. built on this global understanding of SC-FC coupling by exploring higher-resolution regional relationships -- they found SC-FC coupling to be strongest in visual and subcortical areas with high SC [@guHeritabilityInterindividualVariability2021]. 
   
-  On the local scale, previous studies from our group on coupling between cortical thickness and sulcal depth has suggested the cortical sheet is generally thinner in sulcal locations than in gyral locations and that this relationship was more spatially heterogeneous than previously described [@vandekarSubjectlevelMeasurementLocal2016]. A separate study exploring IMCo between cerebral blood flow and resting-state fMRI signal amplitude showed that age-related declines in neurovascular coupling occurred most drastically during mid-adolescence and were enriched in the dorsal attention network [@ballerDevelopmentalCouplingCerebral2021]. There were also differences in CBF-ALFF coupling between males and females; these differences were enriched in the frontoparietal network.
+  In addition to structure-function relationships, regional relationships between metabolism and brain function have also been explored. In the study of energy utilization in the brain, Shokri-Kojori et al. showed that regional correspondence between cerebral glucose metabolism and fluctuations in blood oxygenation not only differed between brain networks in healthy patients but was also sensitive to differences between patients with acute or chronic alcohol use [@shokri-kojoriCorrespondenceCerebralGlucose2019]. Of note, these relationships were not identifiable by looking at individual modalities alone. Another regional study on metabolism-function coupling identified significant associations between cerebral blood flow (CBF) and strength of functional connectivity in default, frontoparietal, and primary sensory-motor networks. No significant association was found between CBF and functional connectivity strength in regions outside of these networks [@takAssociationsRestingStateFMRI2015].
   
-  In these prior local IMCo studies, each voxel-wise coupling value was defined as the slope of the weighted linear regression (WLR) lines fit within a local neighborhood between two modalities. However, because this method of calculating IMCo is based on regression slopes, it does not take into account voxel-level correlation and also suffers from inherent asymmetry, where coupling values depend on which modalities is used as the independent variable in the WLR. Thus, this asymmetry necessitates arbitrary, yet influential, decision-making when it comes to analysis and limits straight-forward interpretation. Such a measure for IMCo is also limited to only two modalities, so the study of coupling between more than two modalities using existing methods would require analysis of all pairwise coupling. As the number of total modalities increases, this can become challenging to interpret. Additionally, analysis of all pairwise coupling may not address overall coupling.
+  On the sub-regional local scale, studies from our group on coupling between cortical thickness and sulcal depth have suggested the cortical sheet is generally thinner in sulcal locations than in gyral locations and that this relationship was more spatially heterogeneous than previously described [@vandekarSubjectlevelMeasurementLocal2016]. A separate study exploring local IMCo between CBF and resting-state amplitude of low-frequency fluctuations (ALFF) showed that age-related declines in this measure of neurovascular coupling were most pronounced during mid-adolescence and were enriched in the dorsal attention network [@ballerDevelopmentalCouplingCerebral2021]. There were also differences in CBF-ALFF coupling between males and females which were enriched in the frontoparietal network.
   
-  In response to these limitations, we propose a novel, principal component analysis (PCA) based method for estimating IMCo that uses local covariance decomposition to define symmetric voxel-wise coupling values valid for two or more modalities. This method reduces complex local covariance structures into a single value, thus providing a more natural and interpretable way of describing coupling in settings with two modalities. It also allows for simplified study of overall local covariance structure in settings with more than two modalities. To demonstrate its sensitivity to biologically relevant patterns, we show that PCA-based IMCo (pIMCo) uncovers differences in three-modality coupling with respect to age and sex in youth.
+  In these local IMCo studies, each vertex-wise coupling value was defined as the slope of the weighted linear regression (WLR) best-fit line for that local neighborhood between two modalities. However, because this method of calculating IMCo is based on regression slopes, it does not consider vertex-level correlation and suffers from inherent asymmetry, where coupling values depend on which modality is defined as the independent variable in the WLR. This asymmetry necessitates arbitrary, yet influential, choices when it comes to analysis and limits straightforward interpretation. This measure for IMCo is also limited to only two modalities, so the study of coupling between more than two modalities using this method would require analysis of all pairwise couplings. As the number of total modalities increases, this approach can become challenging to interpret. Additionally, analysis of all pairwise couplings may not parsimoniously describe the overall degree of coupling across all modalities.
+  
+  In response to these limitations, we propose a principal component analysis (PCA) based method for estimating IMCo that uses local covariance decomposition to define symmetric voxel-wise coupling values valid for two or more modalities. This method reduces complex local covariance structures into a single value, thus providing an easily interpretable value that characterizes the strength of coupling in settings with two modalities. It also allows for simplified study of more complex local covariance structures in settings with more than two modalities. 
+  
+  To demonstrate its sensitivity to biologically relevant patterns, we show that PCA-based IMCo (pIMCo) uncovers differences in three-modality coupling between CBF, ALFF, and regional homogeneity (ReHo) with respect to age and sex in youth. We chose these modalities because local cortical coupling between vascular organization and resting state fluctuations has been previously characterized. Additionally, while resting state fluctuations can be thought of as a more global property, regional homogeneity is more related to local connectivity. Thus, we were interested in understanding the coupling between cerebral blood flow and both long-range fluctuations and local connectivity.
