--- a/manuscript/04-discussion.Rmd
+++ b/manuscript/04-discussion.Rmd
@@ -1,32 +1,37 @@
-# Discussion
-  As growing emphasis is placed on the acquisition of multi-modal data, new methodologies are necessary to enable these analyses. In 2016, Vandekar et al. introduced a method based on local WLR slopes to study IMCo relationships at the single voxel level and showed it could reveal patterns between cortical thickness and sulcal depth that had been undiscovered by studies conducted on regions of interest or across the entire cortex [@vandekarSubjectlevelMeasurementLocal2016]. Despite its strengths, because this method relies on estimating WLR slopes between modalities, it is inherently limited to the two-modality setting, cannot take correlation between modalities into account, and is asymmetric. These limitations are illustrated by the two-modality example in Figure \@ref(fig:wlrpca). We see that, if ALFF is regressed on to CBF, the WLR coupling value is 0.25, indicating little coupling, but if CBF is regressed on to ALFF, the WLR coupling value is 1.25, indicating much more coupling. These WLR coupling values describe the trend of the relationship between ALFF and CBF, but do not account for the statistical strength of that relationship.
-  
-  In this manuscript, we introduce pIMCo, generalized approach to estimating IMCo that can be applied to two or more modalities, can be interpreted as a direct summary of local covariance matrices, and is symmetric (Figure \@ref(fig:wlrpca)). Our method can be used with any combination of volumetric images to produce single-subject, voxel-resolution coupling images which can then be analyzed using standard techniques. We applied our proposed method to show significant coupling between cerebral blood flow, resting state activations, and local connectivity throughout the brain. We then used voxel-level analyses to characterize how coupling varies in neurodevelopment.
+# Discussion 
+  As growing emphasis is placed on the acquisition of multi-modal data, new methodologies are necessary to enable these analyses. In this manuscript, we introduce pIMCo, a generalized approach to estimating local IMCo that can be applied to two or more modalities, can be interpreted as a direct summary of local covariance matrices, and is symmetric (Figure \@ref(fig:wlrpca)). Our method can be used with any combination of volumetric images to produce single-subject, voxel-resolution coupling images which can then be analyzed using standard techniques. We applied our proposed method to show significant coupling between cerebral blood flow, resting state fluctuations, and local connectivity throughout the brain. We then used voxel-level analyses to characterize how coupling varies in neurodevelopment.
 
-## Coupling of blood flow, resting state activation, and connectivity vary with age and sex
-  We found that CBF-ALFF-ReHo coupling was spatially heterogeneous and varied with age and sex in neurodevelopment in both subcortical structures and cortical networks. These findings, which uncover otherwise undetectable intermodal interactions, are unique to those from individual modality analyses. We noticed that regions with high CBF-ALFF-ReHo coupling across subjects also tended to have high variance in coupling. This suggests these regions may be biologically interesting in the context of CBF-ALFF-ReHo coupling, since these regions may be home to pronounced differences in coupling phenotypes between subjects.
+## Coupling of cerebral blood flow, resting state fluctuations, and local connectivity vary with age and sex 
+  We found that CBF-ALFF-ReHo coupling was spatially heterogeneous and varied with age and sex in neurodevelopment in both subcortical structures and functional networks. These findings, which uncover otherwise undetectable intermodal interactions, are unique to those from individual modality analyses.
+  
+  We noticed that regions with higher CBF-ALFF-ReHo coupling across subjects also tended to have higher variance in coupling. This suggests that these regions may be biologically interesting in the context of CBF-ALFF-ReHo coupling and important regions for future exploration, since they appear to demonstrate pronounced differences in coupling phenotypes between subjects and could be associated with other variables of interest, such as clinical phenotypes.
 
-  Spin testing showed that the high proportion of coupling-age associations in the frontoparietal and default networks were enriched when compared to the cortex overall. This suggests that in neurodevelopment, there is change in not only vascular organization, resting state activation, and connectivity individually, but also in the strength of interaction between these features. These findings are consistent with and fortify the literature demonstrating the importance of frontoparietal and default networks as regions for change in neurodevelopment [@fairMaturingArchitectureBrain2008; @chaiEvolutionBrainNetwork2017; @linDevelopmentFrontoparietalConnectivity2019]. In subcortical structures, high proportions of coupling associations with age seen in the caudate, pallidum, hippocampus, and thalamus suggest that modulation of vascular, resting state activation, and connectivity coupling may be necessary in the development of movement, memory, and fundamental brain activities.
+  Spin testing showed that the high proportion of coupling-age associations in the frontoparietal and default networks were enriched when compared to the cortex overall. This suggests that in neurodevelopment, there is change in not only blood flow, resting state fluctuations, and local connectivity individually, but also in the strength of interaction among these features. These findings are consistent with and fortify the literature demonstrating the importance of frontoparietal and default networks as regions for change in neurodevelopment [@fairMaturingArchitectureBrain2008; @chaiEvolutionBrainNetwork2017; @linDevelopmentFrontoparietalConnectivity2019; @ballerDevelopmentalCouplingCerebral2021]. Outside of neurodevelopment, our findings are consistent with previous work showing that coupling between CBF and functional connectivity strength is stronger in frontoparietal and default networks than regions outside these networks [@takAssociationsRestingStateFMRI2015]. In subcortical structures, high proportions of coupling associations with age seen in the caudate, pallidum, hippocampus, and thalamus suggest that modulation of vascular, resting state fluctuations, and local connectivity coupling may be necessary in the development of movement, memory, and fundamental brain activities. 
   
-  High proportions of coupling associations with sex in the hippocampus and thalamus suggest that male-female differences in memory and fundamental brain activities between males and females could be explained in part by the strength of vascular organization, resting state activation, and connectivity coupling. The rarity of coupling-sex associations throughout the cortex suggests that this coupling may not play a role in explaining sex-based differences in higher-order processing. 
+  High proportions of coupling associations with sex in the hippocampus and thalamus suggest that male-female differences in memory and related cognitive functions between males and females could be explained in part by the strength of regional brain metabolism as measured by cerebral blood flow, resting state fluctuations, and local connectivity coupling. In the cortex, the rarity of coupling-sex associations suggests that this coupling may not play a role in explaining cortical sex-based differences or that this relationship is more complex than our analyses could uncover. These cortical findings are of interest when compared to previous work showing a high proportion of the cortex had significant associations between sex and CBF-ALFF coupling [@ballerDevelopmentalCouplingCerebral2021]. Together, these studies demonstrate that three-modality coupling identifies unique relationships when compared to two-modality coupling.
   
-  Interestingly, despite low coupling-sex signal in the frontoparietal network, spin testing showed enrichment of coupling associations with sex in this network. Since spin testing is a spatial permutation test that uses the sex-coupling association thresholded p-value map to generate data under the null, this is likely due to a combination of overall rare such associations in the cortex and the particular spatial distribution of these associations within the frontoparietal network. This finding highlights potential shortcomings of using the spin test for enrichment analysis. Additionally, statistical analysis of enrichment in subcortical structures is not yet possible. More methods development is needed in this area.
+  Notably, despite low coupling-sex signal in the frontoparietal network, spin testing showed enrichment of coupling associations with sex in this network. Since spin testing is a spatial permutation test that uses the coupling-sex association thresholded p-value map to generate data under the null, this significant finding is likely due to a combination of overall rare coupling-sex associations in the cortex and the spatial distribution of these associations within the frontoparietal network. This finding highlights potential shortcomings of using the spin test for enrichment analysis. Additionally, statistical analysis of enrichment in subcortical structures is not yet possible, so more methods development is needed in this area.
 
-## Limitations
-  pIMCo is designed to summarize a complex local covariance structure as one value for easy analysis, data reduction, and interpretation. This leads to outputs that cannot fully characterize the intricacies of coupling. This is especially true in settings with more than two modalities -- the covariance structure becomes even more complex, so more information is lost when it is summarized. However, in comparison to current analysis methods that do not take advantage of any information from complicated local covariance structures, pIMCo allows for these structures to be analyzed in an informative, yet manageable, way.
+## Limitations and Future Directions
+  pIMCo is designed to summarize a complex local covariance structure, which necessarily leads to outputs that cannot fully characterize the intricacies of coupling. This is especially true in settings with more than two modalities -- the covariance structure becomes even more complex, and more information is lost when it is summarized. As such, high coupling values can result from many different covariance features, and it is challenging to understand the basis of these high values.
   
-  The symmetric nature of pIMCo is conducive to more consistent interpretation when compared to slope-based IMCo. However, while slope is an intuitive measure that can be interpreted as capturing the effect size of a relationship, including its directionality, the generalizable nature of our pIMCo value makes it challenging to interpret biologically. Instead, it is most accurately interpreted in statistical terms -- as a measure of the proportion of variance explained by the first eigenvector, or as a measure of how well the local covariance structure could be summarized in one dimension. Visually, high values of coupling suggest data from those local neighborhoods look like long ellipsoids, while low values of coupling suggest those data look more like spheres (Figure \@ref(fig:wlrpca)).
+  The symmetric nature of pIMCo is conducive to more consistent interpretation when compared to slope-based IMCo, since pIMCo does not depend on reference modality specification. However, while slope is a biologically intuitive measure that can be interpreted as capturing the directionality and effect size of a relationship, the generalizable nature of the pIMCo value makes it challenging to interpret biologically, especially when used on more than two modalities. Instead, it is most accurately interpreted in statistical terms -- as a measure of the proportion of variance explained by the first eigenvector, as a measure of how well the local covariance structure could be summarized in one dimension, or as a measure of how ellipsoidal the neighborhood is instead of spherical. This is shown in Figure \@ref(fig:wlrpca), where the WLR coupling value estimates that, on average, a 1 unit increase in CBF corresponds to a 1.25 unit increase in ALFF, while the pIMCo coupling value describes the ratio of the ellipse's major axis to minor axis and suggests the statistical strength of the relationship between ALFF and CBF is strong.
   
-## Future directions [TODO: Discuss future directions wrt pIMCo]
-  In this study, we applied pIMCo to study coupling between features derived from pcASL and rfMRI images. In the future, this method can be applied to any study in which interactions between multiple modalities are of interest. For example,[TODO] However, these correspondence analyses were performed regionally or globally -- voxel-wise IMCo analyses could reveal further insights.
-  
-  In the context of neurodegenerative disorders, it is well-known that Alzheimer's disease is characterized by changes in structural and functional MRI as well as in amyloid-tau positron emission tomography (PET) [@frisoniClinicalUseStructural2010; @rowleyAmyloidTauPET2020; @sperlingPotentialFunctionalMRI2011]. Numerous studies have been done to characterize Alzheimer's-related changes in these individual modalities as well as on interactions between these modalities [@bucknerMolecularStructuralFunctional2005; @hasaniSystematicReviewAssociation2021; @renApplicationStructuralFunctional2020; @walesEffectsAmyloidTau2021]. In this setting, pIMCo could provide voxel-level resolution in pairwise comparisons as well as in all three modalities together. This could be useful as a data reduction tool to simplify complex covariance structures for descriptive analyses as well as a data augmentation tool for predictive efforts.
-  
-# Conclusion
-  pIMCo offers a generalized approach for describing coupling between two modalities, as well as a novel perspective for summarizing the overall covariance structure between more than two modalities. Here, we applied this method to the analysis of coupling between cerebral blood flow, resting state activations, and local connectivity maps. This analysis revealed patterns in neurodevelopment with respect to age and sex that were unique to those present in any individual modality. As multi-modal data becomes more common, we hope that pIMCo will serve as a tool for capturing complex intermodal relationships and allow for additional descriptive analyses, improved prediction efforts, and novel methodological advances, among others.
-  
-# Acknowledgements
-  This study was supported by grants from the National Institute of Mental Health (R01MH112847 to TDS and RTS; R01MH120482 and R01MH113550 to TDS; R01 MH123550-01 to RTS; R01MH107235 to RCG; 2T32MH019112-29A1 to EBB; R01MH120174, R01MH119185, and R56AG066656 to DRR). FH was supported by NIH Medical Scientist Training Program T32 GM07170. SMW was supported by the National Science Foundation Graduate Research Fellowship Program (NSF GRFP). The PNC data used was funded by NIMH RC2 grants (MH089983 and MH089924 to REG).
+  Next, since PCA functions as a linear dimension reduction technique, it is most effective at summarizing data whose shape is roughly ellipsoid. However, it is unlikely that such an assumption holds for all voxels and all combinations of different modalities. For example, in a two-dimensional neighborhood, it could be possible that there is a strong quadratic relationship between modalities, but the data is not well-summarized by one eigenvalue and its corresponding eigenvector. In such cases, an IMCo technique based on manifold learning concepts could be a useful improvement that picks up on otherwise undetected intermodal relationships.
 
-# References
+  Finally, pIMCo is designed to estimate coupling in cross-sectional multi-modality datasets. However, there is also rich covariance information in longitudinal datasets with one or multiple modalities. Future implementations of pIMCo suitable for longitudinal data could investigate whether IMCo changes over time in neurodevelopment or disease, and if so, whether such changes may be useful in identifying biomarkers for clinical phenotypes.
+  
+# Conclusion 
+  pIMCo offers a novel perspective for summarizing the overall covariance structure between more than two modalities as well as a generalized, symmetric approach for describing coupling in the two-modality setting. Here, we applied this method to the analysis of coupling between cerebral blood flow, resting state fluctuations, and local connectivity images. This analysis revealed patterns in neurodevelopment with respect to age and sex that differed from those present in any individual modality. As multi-modal data becomes more common, we hope that pIMCo will serve as a tool for capturing complex intermodal relationships and enable more sophisticated descriptive analyses, improved prediction efforts, and novel methodological advances, among others.
+  
+# Acknowledgements {-}
+  This study was supported by grants from the National Institute of Mental Health (R01MH112847 to TDS and RTS; R01MH120482 and R01MH113550 to TDS; R01 MH123550-01 to RTS; R01MH107235 to RCG; 2T32MH019112-29A1 to EBB; R01MH120174, R01MH119185, and R56AG066656 to DRR). FH was supported by NIH Medical Scientist Training Program T32 GM07170. SMW was supported by the National Science Foundation Graduate Research Fellowship Program (NSF GRFP). The PNC data used was funded by NIMH RC2 grants (MH089983 and MH089924 to REG). Funding sources were not involved in study design, data analysis, manuscript preparation, or submission decisions.
+  
+# Disclosures and declaration of interest {-}
+RTS receives consulting income from Octave Bioscience and compensation for reviewership duties from the American Medical Association. The authors report no conflicts of interest.
+
+\newpage
+# References {-}
 <div id="refs"></div>
+
+\newpage
