rearranged supplement and main

--- a/ALFF_BASILc_REHO/R/simulation_sampling.Rmd
+++ b/ALFF_BASILc_REHO/R/simulation_sampling.Rmd
@@ -99,32 +99,26 @@ alff_cbf_df <- alff_cbf_df %>%
          max_abs = pmax(cbf_abs, alff_abs)) %>% 
   select(pimco, everything())
 
-pearson_cor <- cor(alff_cbf_df, method = "pearson")
+write.csv(alff_cbf_df, 
+          file.path(settings$output_dir, "csvs/simulation_sampling.csv"))
+#pearson_cor <- cor(alff_cbf_df, method = "pearson")
 kendall_cor <- cor(alff_cbf_df, method = "kendall")
-
-for (i in 1:ncol(alff_cbf_df)) {
-  for (j in 1:ncol(alff_cbf_df)) {
-    if (i <= j) {
-      pearson_cor[i, j] = NA
-      kendall_cor[i, j] = NA
-    }
-  }
-}
 ```
 
 ```{r}
 title_size <- 25
 x_size <- 20
 x_angle <- 45
-y_axis_size <- 15
-y_title_size <- 23
-head(alff_cbf_samp)
+axis_size <- 15
+xy_title_size <- 23
 
-with(alff_cbf_samp, plot(alff_ind, cbf_ind))
-with(alff_cbf_samp, plot(alff_abs, cbf_abs))
+head(alff_cbf_df)
 
-with(alff_cbf_samp, plot(pimco, alff_ind))
-ggplot(alff_cbf_samp) + geom_point(aes(pimco, alff_ind, color = log(cbf_abs + 0.25))) + 
+with(alff_cbf_df, plot(alff_ind, cbf_ind))
+with(alff_cbf_df, plot(alff_abs, cbf_abs))
+
+with(alff_cbf_df, plot(pimco, alff_ind))
+ggplot(alff_cbf_df) + geom_point(aes(pimco, alff_ind, color = log(cbf_abs + 0.25))) + 
   theme(panel.border = element_blank(), 
         panel.background = element_blank(),
         panel.grid.major.y = element_line(color = "gray85"),
@@ -134,21 +128,21 @@ ggplot(alff_cbf_samp) + geom_point(aes(pimco, alff_ind, color = log(cbf_abs + 0.
         plot.title = element_text(size = title_size, hjust = 0.5),
         legend.position = "none")
 
-with(alff_cbf_samp, plot(pimco, alff_abs))
-ggplot(alff_cbf_samp) + geom_point(aes(pimco, alff_abs, color = sqrt(cbf_abs))) + 
+with(alff_cbf_df, plot(pimco, alff_abs))
+ggplot(alff_cbf_df) + geom_point(aes(pimco, alff_abs, color = sqrt(cbf_abs))) + 
   scale_fill_continuous(breaks = c(0, 2.5, 5)) +
   theme_minimal()
-with(alff_cbf_samp, plot(pimco, cbf_abs))
+with(alff_cbf_df, plot(pimco, cbf_abs))
 
-with(alff_cbf_samp, plot(pimco, max_abs))
+with(alff_cbf_df, plot(pimco, max_abs))
 
 pearson_cor
 kendall_cor
 ```
 
 ```{r}
-m1 <- ggplot(alff_cbf_samp) + geom_point(aes(alff_abs, cbf_abs)) + 
-  labs(x = "WLR IMCo Magnitude \n(CBF ~ ALFF)", y = "WLR IMCo Magnitude \n(ALFF ~ CBF)") +
+s1 <- ggplot(alff_cbf_df) + geom_point(aes(alff_abs, cbf_abs)) + 
+  labs(x = "WLR-ALFF Magnitude", y = "WLR-CBF Magnitude") +
   theme(panel.border = element_blank(), 
         panel.background = element_blank(),
         panel.grid.major.y = element_line(color = "gray85"),
@@ -158,56 +152,19 @@ m1 <- ggplot(alff_cbf_samp) + geom_point(aes(alff_abs, cbf_abs)) +
         plot.title = element_text(size = title_size, hjust = 0.5),
         legend.position = "none"); m1
 
-m2 <- ggplot(alff_cbf_samp) + geom_point(aes(pimco, alff_abs, color = log(cbf_abs + 0.25))) + 
-  labs(x = "pIMCo", y = "WLR IMCo Magnitude \n(CBF ~ ALFF)") +
-  theme(panel.border = element_blank(), 
-        panel.background = element_blank(),
-        panel.grid.major.y = element_line(color = "gray85"),
-        axis.line = element_line(colour = "black"),
-        axis.text = element_text(size = axis_size),
-        axis.title = element_text(size = xy_title_size),
-        plot.title = element_text(size = title_size, hjust = 0.5),
-        legend.position = "none"); m2
+# s4 <- ggplot(alff_cbf_df) + geom_point(aes(pimco, cbf_ind, color = log(alff_abs + 0.25))) + 
+#   labs(x = "pIMCo", y = "WLR-CBF") +
+#   theme(panel.border = element_blank(), 
+#         panel.background = element_blank(),
+#         panel.grid.major.y = element_line(color = "gray85"),
+#         axis.line = element_line(colour = "black"),
+#         axis.text = element_text(size = axis_size),
+#         axis.title = element_text(size = xy_title_size),
+#         plot.title = element_text(size = title_size, hjust = 0.5),
+#         legend.position = "none"); s4
 
-m3 <- ggplot(alff_cbf_samp) + geom_point(aes(pimco, max_abs)) + 
-  labs(x = "pIMCo", y = "Max WLR IMCo \nMagnitude") +
-  theme(panel.border = element_blank(), 
-        panel.background = element_blank(),
-        panel.grid.major.y = element_line(color = "gray85"),
-        axis.line = element_line(colour = "black"),
-        axis.text = element_text(size = axis_size),
-        axis.title = element_text(size = xy_title_size),
-        plot.title = element_text(size = title_size, hjust = 0.5),
-        legend.position = "none"); m3
-
-kendall_cor <- cor(alff_cbf_df[, c(1, 5, 6)], method = "kendall")
-rownames(kendall_cor) <- c("pIMCo", "WLR IMCo \nMagnitude \n(ALFF ~ CBF)", "Max WLR \nIMCo \nMagnitude")
-colnames(kendall_cor) <- c("pIMCo", "WLR IMCo \nMagnitude \n(ALFF ~ CBF)", "Max WLR \nIMCo \nMagnitude")
-m4 <- ggcorrplot(kendall_cor, type = "upper", 
-                 show.diag = TRUE, lab = TRUE,
-                 ggtheme = theme_classic(),
-                 show.legend = FALSE,
-                 colors = c("#D55E00", "white", "#0072B2")); m4
-
-main_figure <- ggarrange(m1, m2, m3, m4, nrow = 2, ncol = 2); main_figure
-ggsave(filename = here("output/figures/simulation/main_pimco_imco.png"), plot = main_figure, type = "cairo-png", width = 15.083, height = 10.906, dpi = 300)
-```
-
-
-```{r}
-s1 <- ggplot(alff_cbf_samp) + geom_point(aes(alff_ind, cbf_ind)) + 
-  labs(x = "WLR IMCo \n(CBF ~ ALFF)", y = "WLR IMCo \n(ALFF ~ CBF)") +
-  theme(panel.border = element_blank(), 
-        panel.background = element_blank(),
-        panel.grid.major.y = element_line(color = "gray85"),
-        axis.line = element_line(colour = "black"),
-        axis.text = element_text(size = axis_size),
-        axis.title = element_text(size = xy_title_size),
-        plot.title = element_text(size = title_size, hjust = 0.5),
-        legend.position = "none"); s1
-
-s2 <- ggplot(alff_cbf_samp) + geom_point(aes(pimco, alff_ind, color = log(cbf_abs + 0.25))) + 
-  labs(x = "pIMCo", y = "WLR IMCo \n(CBF ~ ALFF)") +
+s2 <- ggplot(alff_cbf_df) + geom_point(aes(pimco, alff_abs, color = log(cbf_abs + 0.25))) + 
+  labs(x = "pIMCo", y = "WLR-ALFF Magnitude") +
   theme(panel.border = element_blank(), 
         panel.background = element_blank(),
         panel.grid.major.y = element_line(color = "gray85"),
@@ -217,8 +174,8 @@ s2 <- ggplot(alff_cbf_samp) + geom_point(aes(pimco, alff_ind, color = log(cbf_ab
         plot.title = element_text(size = title_size, hjust = 0.5),
         legend.position = "none"); s2
 
-s3 <- ggplot(alff_cbf_samp) + geom_point(aes(pimco, cbf_ind, color = log(alff_abs + 0.25))) + 
-  labs(x = "pIMCo", y = "WLR IMCo \n(ALFF ~ CBF)") +
+s3 <- ggplot(alff_cbf_df) + geom_point(aes(pimco, cbf_abs, color = log(alff_abs + 0.25))) + 
+  labs(x = "pIMCo", y = "WLR-CBF Magnitude") +
   theme(panel.border = element_blank(), 
         panel.background = element_blank(),
         panel.grid.major.y = element_line(color = "gray85"),
@@ -228,22 +185,72 @@ s3 <- ggplot(alff_cbf_samp) + geom_point(aes(pimco, cbf_ind, color = log(alff_ab
         plot.title = element_text(size = title_size, hjust = 0.5),
         legend.position = "none"); s3
 
-kendall_cor <- cor(alff_cbf_df[, 1:3], method = "kendall")
-rownames(kendall_cor) <- c("pIMCo\n", "WLR IMCo  \n(ALFF ~ CBF)", "WLR IMCo  \n(CBF ~ ALFF)")
-colnames(kendall_cor) <- c("pIMCo\n", "WLR IMCo  \n(ALFF ~ CBF)", "WLR IMCo  \n(CBF ~ ALFF)")
-# s4 <- corrplot(kendall_cor, type="upper", method="color",
-#          tl.pos="lt", tl.col="black",  tl.offset=1, tl.srt=0, col.lim = c(0, 1))
-# s4 <- corrplot(kendall_cor, add=T, type="lower", method="number",
-#          col="black", diag=F, tl.pos="n", cl.pos="n")
-s4 <- ggcorrplot(kendall_cor, type = "lower", 
+kendall_cor <- cor(alff_cbf_df[, c(1, 4, 5)], method = "kendall")
+rownames(kendall_cor) <- c("pIMCo", "WLR-CBF \nMagnitude", "WLR-ALFF \nMagnitude")
+colnames(kendall_cor) <- rownames(kendall_cor)
+s4 <- ggcorrplot(kendall_cor, type = "upper", 
                  show.diag = TRUE, lab = TRUE,
                  ggtheme = theme_classic(),
                  show.legend = FALSE,
                  colors = c("#D55E00", "white", "#0072B2")); s4
 
-supplement <- ggarrange(s1, s2, s3, s4, nrow = 2, ncol = 2); supplement
+supplement_figure <- ggarrange(s1, s2, s3, s4, nrow = 2, ncol = 2); supplement_figure
 
-ggsave(filename = here("output/figures/simulation/supplement_pimco_imco.png"), plot = supplement, type = "cairo-png", width = 15.083, height = 10.906, dpi = 300)
+ggsave(filename = here("output/figures/simulation/supplement_pimco_imco.png"), plot = supplement_figure, type = "cairo-png", width = 15.083, height = 10.906, dpi = 300)
 ```
+
+
+```{r}
+m1 <- ggplot(alff_cbf_df) + geom_point(aes(alff_ind, cbf_ind)) + 
+  labs(x = "WLR-ALFF", y = "WLR-CBF") +
+  theme(panel.border = element_blank(), 
+        panel.background = element_blank(),
+        panel.grid.major.y = element_line(color = "gray85"),
+        axis.line = element_line(colour = "black"),
+        axis.text = element_text(size = axis_size),
+        axis.title = element_text(size = xy_title_size),
+        plot.title = element_text(size = title_size, hjust = 0.5),
+        legend.position = "none"); m1
+
+m2 <- ggplot(alff_cbf_df) + geom_point(aes(pimco, alff_ind, color = log(cbf_abs + 0.25))) + 
+  labs(x = "pIMCo", y = "WLR-ALFF") +
+  theme(panel.border = element_blank(), 
+        panel.background = element_blank(),
+        panel.grid.major.y = element_line(color = "gray85"),
+        axis.line = element_line(colour = "black"),
+        axis.text = element_text(size = axis_size),
+        axis.title = element_text(size = xy_title_size),
+        plot.title = element_text(size = title_size, hjust = 0.5),
+        legend.position = "none"); m2
+
+m3 <- ggplot(alff_cbf_df) + geom_point(aes(pimco, max_abs)) + 
+  labs(x = "pIMCo", y = "Max WLR Magnitude") +
+  theme(panel.border = element_blank(), 
+        panel.background = element_blank(),
+        panel.grid.major.y = element_line(color = "gray85"),
+        axis.line = element_line(colour = "black"),
+        axis.text = element_text(size = axis_size),
+        axis.title = element_text(size = xy_title_size),
+        plot.title = element_text(size = title_size, hjust = 0.5),
+        legend.position = "none"); m3
+
+kendall_cor <- cor(alff_cbf_df[, c(1, 3, 6)], method = "kendall")
+rownames(kendall_cor) <- c("pIMCo", "WLR-ALFF", "Max WLR \n Magnitude")
+colnames(kendall_cor) <- rownames(kendall_cor)
+m4 <- ggcorrplot(kendall_cor, type = "lower", 
+                 show.diag = TRUE, lab = TRUE,
+                 ggtheme = theme_classic(),
+                 show.legend = FALSE,
+                 colors = c("#D55E00", "white", "#0072B2")); m4
+
+main_figure <- ggarrange(m1, m2, m3, m4, nrow = 2, ncol = 2); main_figure
+
+ggsave(filename = here("output/figures/simulation/main_pimco_imco.png"), plot = main_figure, type = "cairo-png", width = 15.083, height = 10.906, dpi = 300)
+```
+
+```{r}
+ggarrange(s1, s2, m3, s4, nrow = 2, ncol = 2)
+```
+
 
 
