--- a/fwhm1_ALFF_BASILc_REHO/R/create_barplot.Rmd
+++ b/fwhm1_ALFF_BASILc_REHO/R/create_barplot.Rmd
@@ -53,8 +53,8 @@ y_title <- "Proportion"
 pval_size <- 5
 pval_nudge <- 0.01
 
-y_lims_age <- c(0, 0.2)
-y_lims_sex <- c(0, 0.2)
+y_lims_age <- c(0, 0.15)
+y_lims_sex <- c(0, 0.15)
 
 age_aal <- ggplot(coupled_aal %>% filter(map_name == "global_age"), 
        aes(region, proportion)) +
@@ -78,7 +78,7 @@ age_yeo7 <- ggplot(coupled_yeo7 %>% filter(map_name == "global_age"),
        title = "Age Associations in Yeo 7 Networks") +
   scale_y_continuous(limits = y_lims_age) +
   scale_x_discrete(labels = c("Visual", "Somatomotor", "Dorsal\nAttention", "Ventral\nAttention", "Limbic", "Fronto-\nparietal", "Default")) +
-  geom_text(label = c("", "", "", "", "", "p = 0.0125", "p = 0.039"), size = pval_size, nudge_y = pval_nudge) + 
+  geom_text(label = c("", "", "", "", "", "p = 0.067", "p = 0.057"), size = pval_size, nudge_y = pval_nudge) + 
   theme(panel.border = element_blank(), 
         panel.background = element_blank(),
         panel.grid.major.y = element_line(color = "gray85"),
@@ -110,7 +110,7 @@ sex_yeo7 <- ggplot(coupled_yeo7 %>% filter(map_name == "global_sex"),
        title = "Sex Associations in Yeo 7 Networks") +
   scale_y_continuous(limits = y_lims_sex) +
   scale_x_discrete(labels = c("Visual", "Somatomotor", "Dorsal\nAttention", "Ventral\nAttention", "Limbic", "Fronto-\nparietal", "Default")) +
-  geom_text(label = c("", "", "", "", "", "p = 0.0115", ""), size = pval_size, nudge_y = pval_nudge) + 
+  geom_text(label = c("", "", "", "p = 0.343", "", "p = 0.110", ""), size = pval_size, nudge_y = pval_nudge) + 
   theme(panel.border = element_blank(), 
         panel.background = element_blank(),
         panel.grid.major.y = element_line(color = "gray85"),
